# dhtc-fullstack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  handoff.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_16_1454_initial_dhtc_schema.py  2026_05_17_0052_add_product_rating.py  2026_05_17_0323_add_order_events_addresses_wishlist.py  2026_05_17_0353_add_user_full_name_phone.py  2026_05_17_0753_add_notifications_table_and_order_notes.py  2026_05_17_1138_add_return_requests.py  2026_05_17_1200_add_product_status_category_index.py  2026_05_17_1400_add_platform_config.py  2026_05_19_0001_add_chat_messages.py  2026_05_20_0001_add_page_views.py  2026_05_20_1441_create_fb_profiles.py  2026_05_20_2326_extend_chat_messages_p5c.py  2026_05_24_1100_create_customer_clusters.py  (+6 more)
backend/app/: deps.py  main.py  seed.py
backend/tests/: conftest.py  test_admin.py  test_admin_behavior.py  test_admin_crm.py  test_auth.py  test_auth_facebook.py  test_cart.py  test_chat_messages_p5c.py  test_consent.py  test_customer.py  test_customer_clusters.py  test_db_portability.py  test_health.py  test_merchant_images.py  test_orders.py  test_proactive_reply_service.py  test_product_images.py  test_products.py  test_promotions_apply.py  test_seller_profile_extended.py  test_shipping_zones.py  test_tracking.py  test_wallet.py  test_webhook_data_deletion.py  test_webhook_profile_fetch.py
(+346 files in other folders)
